<resources>
    <!-- Defult -->
    <string name="app_name">E-Commerce</string>
    <string name="action_settings">Settings</string>

    <!-- Icons -->
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <!-- Navigation -->
    <string name="piz_catalog">Pizza catalog</string>
    <string name="sales">Sales</string>
    <string name="my_order">My order</string>
    <string name="about_delevery">About Delevery</string>
    <string name="profile">Profile</string>
    <string name="sing_out">Sing out</string>
    <string name="title_activity_basket">Basket</string>
    <string name="title_activity_about_delevery">AboutDelevery</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Style -->
    <string name="marginTopAbout">12dp</string>
    <string name="marginTopAboutTwo">12dp</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Order activity -->
    <string name="your_name">Your name</string>
    <string name="information_about_devilery">Information</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="house_number">House number</string>
    <string name="flat_number">Flat number</string>
    <string name="your_phone_number">Your phone Number</string>
    <string name="next_step">Next step</string>
    <string name="name">Name</string>

    <!-- About Delivery -->
    <string name="pizza">Pizza ресторан</string>
    <string name="time_work">10:00 - 22:00 пн-вс</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="website">Website</string>
    <string name="map">Map</string>
    <string name="Place">112 Plaza Dr, West Covina, CA 91790</string>
    <string name="website_link">shoppingplazawestcovina.com</string>
    <string name="phone">+1 626-960-8032</string>

    <!-- List Item -->
    <string name="more_info_button">More info</string>
    <string name="add_to_basket_button">Add to Basket</string>

    <!-- Button order -->
    <string name="basket_order_price">ORDER : 0 $</string>

    <!-- Accaunt info -->
    <string name="sing_in">Sing in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="need_an_accaunt">Need an accaunt?</string>
    <string name="phone_accaunt">+7-(000)-00-000-00</string>
    <string name="email_accaunt">Email@gmail.com</string>
    <string name="title_phone_accaunt">Your phone</string>
    <string name="title_mail_accaunt">Your mail</string>
    <string name="password_accaunt">**************</string>
    <string name="title_password_accaunt">Your password</string>
    <string name="save">Save</string>
    <!-- Profile info -->

    <!-- Order -->
    <string name="payment_method">Visa / MasterCard</string>
    <string name="cash_method">Cash</string>
    <string name="title_of_pay">Payment :</string>
    <string name="under_title_of_order">about devilery</string>
    <string name="title_activity_detail">DetailActivity</string>


    <!-- Forgot password -->
    <string name="send_password_to_email">send password to email</string>

    <!-- Detail -->
    <string name="more_information">More information</string>

    <!-- Animation -->
    <string name="add_to_cart">add to cart</string>
    <string name="discount">Discount</string>
    <string name="all_products">All products</string>

    <!-- Sing up -->
    <string name="sing_up">Sing up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="instruction">by tapping \'Sing up\' you agree to the conditions</string>
    <string name="submit">submit</string>


</resources>
