<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@android:color/holo_red_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="30dp"
    tools:context="com.sanke46.android.e_commerce.ui.navigation.LoginActivity">


    <ImageView
        android:id="@+id/logoLogIn"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:src="@drawable/logotwo"/>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sing_in"
        android:textColor="#fff"
        android:textSize="23dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="@dimen/_30sdp"
        />
    <!-- Login progress -->


    <!--<ScrollView-->
        <!---->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <!--</ScrollView>-->

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textColor="#333"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:layout_marginBottom="14dp"
                    android:textSize="16sp"
                    android:background="@drawable/edit_text"/>


                <EditText
                    android:id="@+id/password"
                    android:textColor="@color/BlackGrey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:layout_marginBottom="14dp"
                    android:textSize="16sp"
                    android:background="@drawable/edit_text" />




            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/border_red_button"
                android:textColor="#fff"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/fogot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:text="@string/forgot_password"/>

                <TextView
                    android:id="@+id/needAccaunt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:text="@string/need_an_accaunt"/>

            </LinearLayout>


        </LinearLayout>

</LinearLayout>
